# PythonPiscine42

./: README.md
python_0_starting/ex00/: Hello.py
python_0_starting/ex01/: format_ft_time.py
python_0_starting/ex02/: find_ft_type.py
python_0_starting/ex03/: NULL_not_found.py
python_0_starting/ex04/: whatis.py
python_0_starting/ex05/: building.py
python_0_starting/ex06/: filterstring.py  ft_filter.py  myTests.txt
python_0_starting/ex07/: sos.py
python_0_starting/ex08/: Loading.py  tester.py
python_0_starting/ex09/: LICENSE  README.md  pyproject.toml  test.py
python_0_starting/ex09/ft_package/: __init__.py  core.py
python_0_starting/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
